# debgpt7.8-with-vectorDB

./: CHANGELOG.md  Makefile  PROGRESSLOG.md  README.md  conf.py  index.rst  messages.db  pyproject.toml  requirements-vector-service.txt
.github/: agent_instructions.md
.github/workflows/: build-debgpt.yml
assets/: README.txt
contrib/vector_service/: #19197076874 - build  .env  .env.example  README.md  bootstrap_env.sh  configure_env.py  docker-compose.yml  dump_vector_store.py  setup_vectordb.sh  start_services.sh  test_suite.sh
contrib/vector_service/nginx/: debgpt-vector.conf
contrib/vector_service/systemd/: debgpt-vector.service
debgpt/: __init__.py  arguments.py  backend.py  cache.py  cli.py  composer.py  configurator.py  debian.py  defaults.py  embeddings.py  frontend.py  llm.py  mapreduce.py  nm_templates.py  policy.py  reader.py  replay.py  retrieval.py  task.py  vectordb.py
debgpt/vector_service/: __init__.py  __main__.py  app.py  backends.py  client.py
debian/: changelog  control  copyright  debgpt-vector-service.conffiles  debgpt-vector-service.dirs  debgpt-vector-service.install  debgpt-vector-service.postinst  debgpt-vector-service.prerm  debgpt-vector-service.service  debgpt-vector-service.tmpfiles  rules  vector-service.env
docs/: debugging-frontends.md
tests/: test_arguments.py  test_cache.py  test_cli.py  test_composer.py  test_debian.py  test_embeddings.py  test_frontend.py  test_mapreduce.py  test_policy.py  test_reader.py  test_replay.py  test_retrieval.py  test_vector_client.py  test_vector_service.py  test_vectordb.py
